Sadece admin kullanıcısının yapabileceği işlemler eklendi. Request/Response logging middleware geliştirmesi yapıldı. Log çıktısı için default olan storage/logs/laravel.log dosyası kullanıldı.
